--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
         class LottoGame {
     constructor(winningNumbers, currentNumbers, message, attempts) {
         this.winningNumbers = this.generateLottoNumbers()
-        this.currentNumbers = []
+        this.currentNumbers = this.generateLottoNumbers()
+        // to test if function works correctly, comment out line below:
+        // this.currentNumbers = this.winningNumbers
         this.message = "Click the button to play"
         this.attempts = 0
     }
 
-    generateLottoNumbers() {
+    generateLottoNumbers(numCount = 6) {
         const nums = []
 
-        while (nums.length <= 6) {
+        while (nums.length <= numCount) {
             const randomNumber = Math.floor(Math.random() * 70);
             if (!(randomNumber in nums)) {
                 nums.push(randomNumber)
@@ -46,22 +48,23 @@
     }
 
     playLotto(winningNumbers) {
-        this.currentNumbers = this.generateLottoNumbers()
+        // this.currentNumbers = this.generateLottoNumbers()
         var maxAttempts = this.attempts + 1000
 
-        while (this.currentNumbers != winningNumbers && this.attempts < maxAttempts) {
+        while (this.currentNumbers != this.winningNumbers && this.attempts < maxAttempts) {
             this.attempts += 1
             this.currentNumbers = this.generateLottoNumbers()
         }
 
-        if (this.currentNumbers != winningNumbers) {
+        if (this.currentNumbers != this.winningNumbers) {
             this.message = `Sorry, you played ${this.attempts} times and spent $${this.attempts*2}.00 but did not win.`
-            // console.log(this.message)
         } else {
-            this.message = `Congrats! You won`
-            // console.log(this.message)
+            if (this.attempts == 0) {
+                this.attempts = 1
+            }
+            this.message = `Congrats! You won on ${this.attempts} attempts and spent $${this.attempts * 2}`
         }
-        document.getElementById('message').innerHTML = game.message
+        document.getElementById('message').innerHTML = this.message
         console.log(this.attempts)
         document.getElementById('currentPlay').innerHTML = `Your last play: ${this.currentNumbers}`
     }
