little padding and stuff

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h3 id="winning_numbers"></h3>
     <button onClick=game.playLotto()>Play</button>
     <!-- Your numbers -->
-    <h3 id="attempts"></h3>
-    <h2 id="message"></h2>
-    <h3 id="currentPlay"></h3>
+    <!-- <h3 id="attempts"></h3> -->
+    <h2 id="currentPlay"></h2>
+    <h3 id="message"></h3>
 
     <script src="lotto.js"></script>
     
