--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play lotto</title>
+    <title>LottoJS</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/6504d4480e.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
