show your best play

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <button onClick=game.playLotto()>Play 1,000 times</button>
     <!-- Your numbers -->
     <h2 id="currentPlay"></h2>
-    <h3 id="message"></h3>
+    <div>
+        <h3 id="message"></h3>
+        <h3 id="matchingNumbers"></h3>
+    </div>
 
     <script src="lotto.js"></script>
     
