--- a/index.html
+++ b/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LottoJS</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="https://kit.fontawesome.com/6504d4480e.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon_io/site.webmanifest">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Karla:wght@500&family=Roboto+Slab&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
-    
-</head>
-<body>
+    <link rel="stylesheet" href="index.css" />
+    <script
+      src="https://kit.fontawesome.com/6504d4480e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon_io/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@500&family=Roboto+Slab&family=Work+Sans:wght@100&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="header-title">
-        <h1>LottoJS <i class="fa-solid fa-ticket"></i></h1>
-        <h3>A lotto simulation, try to play the lotto and see if you can win</h3>
+      <h1>LottoJS <i class="fa-solid fa-ticket"></i></h1>
+      <h3>A lotto simulation, try to play the lotto and see if you can win</h3>
     </div>
     <h3>Here are the <span id="yellow-text">winning numbers</span>:</h3>
     <h3 id="winning_numbers"></h3>
-    <button onClick=game.playLotto()>Play 1,000 times</button>
+    <div class="button-container">
+      <button onClick="game.playLotto()" id="playButton">Play 1,000 times</button>
+    <!-- <div>
+      <label>Autoplay</label>
+      <input type="checkbox" id="autoplayCheckbox" onClick="game.setAutoplay()"/>
+    </div> -->
+      </div>
+    </div>
     <!-- Your numbers -->
     <h2 id="currentPlay"></h2>
     <h3 id="matchingNumbers"></h3>
     <h3 id="message"></h3>
 
     <script src="lotto.js"></script>
-    
-</body>
+
+  </body>
 </html>
