better ui and param for attempts

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <h3>Here are the <span id="yellow-text">winning numbers</span>:</h3>
     <h3 id="winning_numbers"></h3>
     <div class="button-container">
-      <button onClick="game.playLotto()" id="playButton">Play 1,000 times</button>
+      <button onClick="game.playLotto()" id="playButton">Play</button>
+    </div>
     <!-- <div>
       <label>Autoplay</label>
       <input type="checkbox" id="autoplayCheckbox" onClick="game.setAutoplay()"/>
@@ -53,6 +54,8 @@
     <h2 id="currentPlay"></h2>
     <h3 id="matchingNumbers"></h3>
     <h3 id="message"></h3>
+    <h1 id="attempts"></h1>
+    <h1 id="moneySpent"></h1>
 
     <script src="lotto.js"></script>
 
